arranged horizontal content

--- a/index.html
+++ b/index.html
@@ -12,18 +12,35 @@
 		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="something.png">
 	</head>
 	<body>
 		<div id="container">
 			<section id="sidebar">
-				<h1>NoCap</h1>
+				<h1>No<span class="yel">Cap</span></h1>
 				<p>I am a sidebar.</p>
 			</section>
-		
+			
 			<section>
-				<p class="header">NoCap is a different approach to experiencing your photos, again and again. We take away the clutter of tagging, the adding of filters, the buttons for a million different functions you don't really need. Here, we give you two: a button to upload, and a button to view your gallery. We take care of the presentation, using state-of-the-art methods to collage your photos beautifully and responsively.</p>
-				<p class="subheader">At NoCap we sincerely believe that each picture is worth <em>at least</em> a thousand words, and that they should speak for themselves, without the aid of captions. We aim to give an intimate, personalized gallery that you can add to at any time, anywhere.</p>
+				<p class="header">Pictures can speak for themselves. Goodbye, <span class="yel">cap</span>tions.</p>
+				<p class="subheader"><span class="pur">scroll to learn more</span></p>
+			</section>
+
+			<section>
+				<p class="header">NoCap is a <span class="pur">different</span> approach to experiencing your photos. We <span class="red">take away the clutter</span> of tagging, filters, the buttons for a million different functions you don't really need.</p>
+			</section>
+
+			<section>
+				<p class="header">Here, you only need <span class="pur">two</span>: a button to upload, and a button to view your gallery. We take care of the <span class="pur">presentation</span>, using state-of-the-art methods to <span class="pur">collage</span> your photos <span class="red">beautifully and responsively</span>. </p>
+			</section>
+
+			<section>
+				<p class="header">At NoCap we sincerely believe that each picture is worth <em>at least</em> <span class="pur">a thousand words</span>, and that they should speak for themselves, <span class="pur">without the aid of captions</span>. </p>
+			</section>
+
+			<section>
+				<p class="header">We aim to give an <span class="red">intimate, personalized</span> gallery that you can add to at any time, anywhere.</p>
 			</section>
 
 		</div>
