--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="something.png">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="scripts/snap.js"></script>
 	</head>
 	<body>
 		<div id="container">
