--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
 	<body>
 		<div id="container">
 			<section id="sidebar">
-				<h1>No<span class="yel">Cap</span></h1>
-				<p>I am a sidebar.</p>
+				<div class="logo">
+					<h1>No<span class="yel">Cap</span></h1>
+				</div>
+				<div class="upload">
+					<h2>Upload</h2>
+				</div>
+				<div class="gallery">
+					<h2>Gallery</h2>
+				</div>
+				<hr>
 			</section>
 			
 			<section>
@@ -30,19 +38,19 @@
 			</section>
 
 			<section>
-				<p class="header">NoCap is a <span class="pur">different</span> approach to experiencing your photos. We <span class="red">take away the clutter</span> of tagging, filters, the buttons for a million different functions you don't really need.</p>
+				<p class="header">NoCap is a <span class="pur">different</span> approach to experiencing your photos. We <span class="red">take away the clutter</span> of tagging, filters, the buttons for<br>a million different functions you don't really need.</p>
 			</section>
 
 			<section>
-				<p class="header">Here, you only need <span class="pur">two</span>: a button to upload, and a button to view your gallery. We take care of the <span class="pur">presentation</span>, using state-of-the-art methods to <span class="pur">collage</span> your photos <span class="red">beautifully and responsively</span>. </p>
+				<p class="header">Here, you only need <span class="pur">two</span>: a button to upload, and a button to view your gallery. We take care of the <span class="pur">presentation</span>, using state-of-the-art methods to <span class="pur">collage</span> your photos<br><span class="red">beautifully and responsively</span>. </p>
 			</section>
 
 			<section>
-				<p class="header">At NoCap we sincerely believe that each picture is worth <em>at least</em> <span class="pur">a thousand words</span>, and that they should speak for themselves, <span class="pur">without the aid of captions</span>. </p>
+				<p class="header">At NoCap we sincerely believe that each picture is worth<br><em>at least</em> <span class="pur">a thousand words</span>, and that they should<br>speak for themselves, <span class="pur">without the aid of captions</span>. </p>
 			</section>
 
 			<section>
-				<p class="header">We aim to give an <span class="red">intimate, personalized</span> gallery that you can add to at any time, anywhere.</p>
+				<p class="header">Our mission is to provide an <span class="red">intimate, personalized</span> gallery that you can add to at any time, anywhere.</p>
 			</section>
 
 		</div>
