--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						enctype="multipart/form-data">
 						<label for="file">Filename:</label>
 						<input type="file" name="file" id="file"><br>
+						<label for="submit">Submit</label>
 						<input type="submit" name="submit" value="Submit">
 						</form>
 					</div>
